<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- facebook sdk -->
    <string name="facebook_app_id">825741174158453</string>
    <!-- kakao sdk -->
    <string name="kakao_app_key">c4d375615f7e71a5ad88755b4ab6fa99</string>

    <!-- application -->
    <string name="app_name">Ruby</string>
    <string name="ruby">Ruby</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Common -->
    <string name="waiting_message">잠시만 기다려주세요...</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="search">검색</string>
    <string name="add">추가</string>
    <string name="remove">삭제</string>
    <string name="ruby_scale">개</string>
    <string name="human_scale">명</string>
    <string name="buy">구매하기</string>

    <!-- Activities -->
    <string name="start_ruby">루비 시작하기</string>
    <string name="start_facebook">페이스북계정으로 로그인</string>
    <string name="start_kakao">카카오계정으로 로그인</string>
    <string name="start_email">이메일로 로그인</string>
    <string name="email_guide">이메일 로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="email">메일주소</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="input_info_guide">올바른 정보를 입력해주세요</string>
    <string name="no_email_guide">메일주소 또는 비밀번호가 잘못되었습니다</string>
    <string name="dup_email_guide">이미 등록된 메일주소입니다</string>
    <string name="input_email_guide">올바른 메일주소를 입력해주세요</string>
    <string name="input_password_guide">패스워드는 6자 이상이어야 합니다</string>
    <string name="password_not_match_guide">패스워드가 맞지 않습니다</string>
    <string name="phone_guide">핸드폰 번호를 입력해주세요</string>
    <string name="wrong_phone_guide">번호를 정확히 입력해주세요</string>
    <string name="dup_phone_guide">이미 등록된 전화번호입니다</string>
    <string name="get_ver_code">인증번호 전송</string>
    <string name="reset_main">처음으로 돌아가기</string>
    <string name="ver_code_guide">전송받은 인증번호를 입력해주세요</string>
    <string name="wrong_ver_code_guide">인증번호가 맞지 않습니다</string>
    <string name="nickname">닉네임</string>
    <string name="birthday">생년월일</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="enable_location_guide">위치정보가 비활성화 되어있어 자동적립이 불가능합니다.\n휴대폰의 설정에서 위치정보를 켜주세요.</string>
    <string name="nav_intro">루비</string>
    <string name="nav_collect">여기어때?</string>
    <string name="nav_use">스토어</string>
    <string name="nav_more">마이페이지</string>
    <string name="intro_phrase">상점에 방문만 해도</string>
    <string name="intro_title">루비는 자동적립!</string>
    <string name="visit_ruby">방문시</string>
    <string name="work_time">운영시간</string>
    <string name="menu">메뉴</string>
    <string name="ruby_info_guide_1" formatted="false">%s님의 현재 루비는</string>
    <string name="ruby_info_guide_2">입니다.</string>
    <string name="use_gem_guide_under">바로 교환 가능한 상품</string>
    <string name="use_gem_guide_over">쫌~만 더 모으면 교환 가능한 상품</string>
    <string name="mine_info">상점정보</string>
    <string name="gem_guide">- 함부로 사지 마\n- 조심해서 써라</string>
    <string name="need_ruby_guide">루비가 부족합니다...</string>
    <string name="buy_gem_guide1">구매하시겠습니까?</string>
    <string name="buy_gem_guide2">구매시 루비가 차감됩니다</string>
    <string name="bought_gem_guide1">구매가 완료되었습니다</string>
    <string name="bought_gem_guide2">메인메뉴>더보기>내 쿠폰함에서 확인하실 수 있습니다</string>
    <string name="use_coupon">사용하기</string>
    <string name="use_coupon_guide">상점 직원에게 제시해주세요. 직원확인 후에는 재사용 불가합니다.</string>
    <string name="use_coupon_confirm">직원확인</string>
    <string name="use_coupon_guide1">사용하시겠습니까?</string>
    <string name="use_coupon_guide2">사용한 쿠폰은 복원되지 않습니다</string>
    <string name="coupon_done">사용완료</string>
    <string name="level_rookie">루키</string>
    <string name="level_bronze">브론즈</string>
    <string name="level_silver">실버</string>
    <string name="level_gold">골드</string>
    <string name="level_guide_rookie">방문당 1개 루비</string>
    <string name="level_guide_bronze">방문당 2개 루비</string>
    <string name="level_guide_silver">방문당 3개 루비</string>
    <string name="level_guide_gold">방문당 5개 루비</string>
    <string name="manage_social">소셜레벨 관리</string>
    <string name="account">내 계정</string>
    <string name="connected">연결됨</string>
    <string name="my_coupons">내 쿠폰함</string>
    <string name="expired">기한만료</string>
    <string name="used">사용완료</string>
    <string name="qrcode">QR코드 적립</string>
    <string name="invalid_qrcode">인식할 수 없는 QR코드입니다</string>
    <string name="already_read_qrcode">이미 인식한 매장입니다</string>
    <string name="no_ruby_guide">이 곳에 남은 루비가 없습니다...</string>
    <string name="wrong_region_guide">루비를 캘 수 없습니다\n위치정보를 알 수 없거나, 매장으로부터 너무 멀리 떨어져 있을 수 있습니다</string>
    <string name="purchase_ruby_message" formatted="false">%s개의 루비를 적립했습니다!</string>
    <string name="invite">친구초대</string>
    <string name="invitation">님이 루비 앱으로 초대합니다</string>
    <string name="move_to_app">앱으로 가기</string>
    <string name="settings">설정</string>
    <string name="nav_search">친구추가</string>
    <string name="nav_pairs">친구목록</string>
    <string name="social_description">소셜레벨이 올라가면 한번에 획득되는 루비가 늘어납니다!\n루비친구를 추가해서 소셜레벨을 올리세요.</string>
    <string name="delete_pair_guide">친구를 삭제합니까?</string>
    <string name="paired">추가했습니다</string>
    <string name="depaired">삭제했습니다</string>
    <string name="edit_profile">프로필 편집</string>
    <string name="auto_check_on">자동적립 On</string>
    <string name="auto_check_off">자동적립 Off</string>
    <string name="logout">로그아웃</string>
    <string name="ruby_message" formatted="false">%s에서 루비를 찾았습니다!</string>
    <string name="get_ruby_guide">이 화면을 종료하면 루비를 캘 수 없습니다</string>
    <string name="get_ruby">루비캐기</string>
    <string name="ruby_mining">루비 캐는중...</string>
    <string name="got_ruby_guide">의 루비를 획득했습니다!</string>
    <string name="now_ruby_guide1">지금까지</string>
    <string name="now_ruby_guide2">의 루비를 모았습니다</string>
    <string name="level_change_message_up">소셜레벨이 상승했습니다!!</string>
    <string name="level_change_message_down">소셜레벨이 하락했습니다...</string>

    <!-- arrays -->
    <string name="mine_type_etc">기타</string>
    <string name="mine_type_restaurant">음식점</string>
    <string name="mine_type_cafe">카페</string>
    <string name="mine_type_bar">주점</string>

    <!-- Titles -->
    <string name="title_activity_ruby">Ruby</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_phone">PhoneActivity</string>
    <string name="title_activity_ver_code">VerCodeActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_my_coupons">MyCouponsActivity</string>
    <string name="title_activity_gem">GemActivity</string>
    <string name="title_activity_social">SocialActivity</string>
    <string name="title_activity_coupon">CouponActivity</string>
    <string name="title_activity_ruby_notice">RubyNoticeActivity</string>
    <string name="title_activity_recommend">RecommendActivity</string>
    <string name="title_activity_rubymine">RubymineActivity</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_event_notice">EventNoticeActivity</string>

</resources>