<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.jaydi.ruby.SignUpActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_sign_up_email"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_white_round"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_sign_up_password"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_white_round"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_sign_up_password_confirm"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_white_round"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textSize="20sp" />

    <Button
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_brown_round"
        android:gravity="center"
        android:onClick="signUp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>