<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="40dp"
    android:paddingTop="40dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/delete_pair_guide"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_delete_pair_cancel"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:background="@drawable/selector_holo_grey_round"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_delete_pair_confirm"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/selector_red_round"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>