<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.jaydi.ruby.PhoneActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/phone_guide"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_phone_phone"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_white_round"
        android:inputType="phone"
        android:textSize="20sp" />

    <Button
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_brown_round"
        android:gravity="center"
        android:onClick="getVerCode"
        android:text="@string/get_ver_code"
        android:textColor="@color/white"
        android:textSize="16sp" />
    
    <Button
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_brown_round"
        android:gravity="center"
        android:onClick="resetMain"
        android:text="@string/reset_main"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>