<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="2.5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="2.5dp"
    tools:context="com.jaydi.ruby.RubyActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <uk.co.senab.bitmapcache.CacheableImageView
            android:id="@+id/image_adapted_coupon_image"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/text_adapted_coupon_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_adapted_coupon_use"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:background="@drawable/selector_red_round"
            android:gravity="center"
            android:text="@string/use_coupon"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_adapted_coupon_cancel"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:background="@drawable/selector_holo_grey_round"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/grey"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_adapted_coupon_expired"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:background="@drawable/selector_holo_grey_round"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/expired"
            android:textColor="@color/grey"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_adapted_coupon_used"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:background="@drawable/selector_holo_grey_round"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/used"
            android:textColor="@color/grey"
            android:textSize="12sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_adapted_coupon_done"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:background="@drawable/background_holo_grey_round"
            android:gravity="center"
            android:text="@string/coupon_done"
            android:textColor="@color/grey"
            android:textSize="12sp"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:id="@+id/view_adapted_coupon_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linear_adpated_coupon_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingEnd="15dp"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/use_coupon_guide"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_adapted_coupon_confirm"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector_red_round"
            android:gravity="center"
            android:text="@string/use_coupon_confirm"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>