<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/settings"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/grey" />

        <Button
            android:id="@+id/button_settings_auto_check"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/selector_white"
            android:gravity="start|center_vertical"
            android:onClick="toggleAutoCheck"
            android:paddingStart="15dp"
            android:text="@string/auto_check_on" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/grey" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/selector_white"
            android:gravity="start|center_vertical"
            android:onClick="logOut"
            android:paddingStart="15dp"
            android:text="@string/logout" />
    </LinearLayout>

</ScrollView>