<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context="com.jaydi.ruby.SignInActivity" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background_splash" />

    <ImageView
        android:layout_width="233dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="135dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="205dp"
        android:scaleType="fitXY"
        android:src="@drawable/main_logo_sub" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:gravity="center"
        android:orientation="vertical" >

        <com.facebook.widget.LoginButton
            xmlns:fb="http://schemas.android.com/apk/res-auto"
            android:id="@+id/button_sign_in_facebook"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:gravity="center"
            fb:login_text="@string/start_facebook" />

        <com.kakao.widget.LoginButton
            android:id="@+id/button_sign_in_kakao"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:text="@string/start_kakao" />

        <Button
            android:id="@+id/button_sign_in_email"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_white_round"
            android:drawablePadding="50dp"
            android:drawableStart="@drawable/ic_at"
            android:gravity="center_vertical|start"
            android:onClick="goToEmail"
            android:padding="15dp"
            android:text="@string/start_email"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>